--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,2 +1,9 @@
 @use './base';
 @use './header';
+@use './form';
+@use './steps';
+@use './testimonial';
+@use './favorites';
+@use './deliveries';
+@use './downloads';
+@use './footer';
