--- a/css/app.css
+++ b/css/app.css
@@ -336,7 +336,7 @@ p {
   font-size: 2rem;
 }
 
-.contenedor {
+.container {
   width: 95%;
   max-width: 1200px;
   margin: 0 auto;
@@ -368,17 +368,485 @@ h3 {
 }
 
 .header {
-  background-color: red;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  padding: 5rem 0;
+  align-items: center;
 }
 @media (min-width: 1024px) {
   .header {
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
   }
 }
 .header__logo {
   width: 30rem;
+  margin-bottom: 5rem;
+}
+@media (min-width: 1024px) {
+  .header__logo {
+    margin-bottom: 0;
+  }
+}
+
+.nav {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+  width: 100%;
+}
+@media (min-width: 1024px) {
+  .nav {
+    width: auto;
+    flex-direction: row;
+    justify-content: flex-end;
+  }
+}
+.nav__link {
+  font-size: 2rem;
+  font-weight: 700;
+  color: #000;
+}
+.nav__link--register {
+  background-color: #e8505b;
+  font-size: 2rem;
+  padding: 1.2rem 3rem;
+  border-radius: 1rem;
+  font-weight: 700;
+  display: block;
+  width: 100%;
+  text-align: center;
+  color: #FFFFFF;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+  border: none;
+}
+.nav__link--register:hover {
+  cursor: pointer;
+  background-color: #e22331;
+}
+@media (min-width: 768px) {
+  .nav__link--register {
+    width: auto;
+  }
+}
+
+@media (min-width: 768px) {
+  .form__grid {
+    display: grid;
+    gap: 5rem;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+.form__content {
+  background-color: #e8505b;
+  padding: 5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+.form__title {
+  color: #FFFFFF;
+  text-align: center;
+}
+.form__section {
+  margin-bottom: 1rem;
+}
+.form__label {
+  display: block;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  margin: 1rem;
+}
+.form__input {
+  width: 100%;
+  padding: 1.5rem;
+  border: none;
+}
+.form__submit {
+  margin-top: 2rem;
+  background-color: #455a64;
+  font-size: 2rem;
+  padding: 1.2rem 3rem;
+  border-radius: 1rem;
+  font-weight: 700;
+  display: block;
+  width: 100%;
+  text-align: center;
+  color: #FFFFFF;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+  border: none;
+}
+.form__submit:hover {
+  cursor: pointer;
+  background-color: #303f46;
+}
+@media (min-width: 768px) {
+  .form__submit {
+    width: auto;
+  }
+}
+@media (min-width: 768px) {
+  .form__submit {
+    width: 100%;
+  }
+}
+.form__img-content {
+  margin-top: 5rem;
+  display: flex;
+  justify-content: center;
+}
+.form__img {
+  width: 30rem;
+}
+@media (min-width: 1024px) {
+  .form__img {
+    width: 100%;
+  }
+}
+
+.steps {
+  margin-top: 5rem;
+}
+.steps__content {
+  background-color: #e8505b;
+  margin-top: -1px;
+}
+.steps__title {
+  text-align: center;
+  color: #FFFFFF;
+}
+.steps__title--description {
+  font-size: 2rem;
+  display: block;
+}
+@media (min-width: 768px) {
+  .steps__grid {
+    display: grid;
+    gap: 5rem;
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+.steps__img {
+  transition-property: transform;
+  transition-duration: 300ms;
+}
+.steps__img:hover {
+  transform: rotate(-4deg) scale(1.1);
+}
+@media (min-width: 480px) {
+  .steps__img:hover {
+    transform: rotate(-4deg) scale(1);
+  }
+}
+
+.testimonial {
+  background-color: #455a64;
+  padding: 2rem;
+  margin-bottom: 2rem;
+  border-radius: 1rem;
+  color: #FFFFFF;
+}
+.testimonial:last-of-type {
+  margin-bottom: 0;
+}
+@media (min-width: 768px) {
+  .testimonial {
+    margin-bottom: 0;
+  }
+  .testimonial:nth-child(1) {
+    grid-column: 1/4;
+  }
+  .testimonial:nth-child(3) {
+    grid-column: 5/6;
+    grid-row: 1/3;
+  }
+  .testimonial:nth-child(4) {
+    grid-column: 1/3;
+  }
+  .testimonial:nth-child(5) {
+    grid-column: 3/5;
+  }
+}
+.testimonial__header {
+  display: flex;
+  gap: 2rem;
+  align-items: center;
+}
+.testimonial__image {
+  flex-basis: 10rem;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.testimonial__author {
+  color: #FFFFFF;
+  font-weight: bold;
+  margin: 0.5rem 0;
+}
+.testimonial__information {
+  font-size: 2rem;
+  line-height: 1.5;
+  margin: 2rem 0 0 0;
+  padding-left: 2rem;
+  position: relative;
+}
+.testimonial__information::before {
+  content: ' " ';
+  font-size: 10rem;
+  position: absolute;
+  left: 0;
+  top: -4rem;
+  opacity: 0.2;
+}
+.testimonial__information--text {
+  color: #FFFFFF;
+}
+
+.testimonials {
+  padding: 5rem 0;
+}
+.testimonials__title {
+  text-align: center;
+}
+@media (min-width: 768px) {
+  .testimonials__grid {
+    display: grid;
+    gap: 2rem;
+    grid-template-columns: repeat(5, 1fr);
+  }
+}
+
+.favorite {
+  background-color: #FFFFFF;
+  padding: 4rem;
+  margin-bottom: 2rem;
+  box-shadow: 0px 0px 2.6px -0.8rem #7d8b92;
+  border-radius: 1rem;
+}
+.favorite:last-of-type {
+  margin-bottom: 0;
+}
+@media (min-width: 768px) {
+  .favorite {
+    margin-bottom: 0;
+  }
+}
+@media (min-width: 768px) {
+  .favorite__grid {
+    display: grid;
+    grid-template-columns: 2fr 3fr;
+    gap: 2rem;
+    align-items: center;
+  }
+}
+@media (min-width: 1024px) {
+  .favorite__grid {
+    grid-template-columns: 1fr 3fr;
+    gap: 4rem;
+  }
+}
+.favorite__image {
+  max-width: 20rem;
+  margin: 0 auto 2rem auto;
+}
+.favorite__content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@media (min-width: 768px) {
+  .favorite__content {
+    align-items: flex-start;
+  }
+}
+.favorite__name {
+  margin: 2rem 0;
+  color: #e8505b;
+  font-size: 2.4rem;
+}
+.favorite__description {
+  margin: 0.5rem 0;
+  text-align: center;
+  font-size: 1.6rem;
+  color: #455a64;
+  line-height: 1.5;
+}
+@media (min-width: 768px) {
+  .favorite__description {
+    text-align: start;
+  }
+}
+
+.favorites {
+  background-color: #eceeef;
+  padding: 5rem 0;
+}
+.favorites__title {
+  text-align: center;
+  color: #455a64;
+}
+@media (min-width: 768px) {
+  .favorites__grid {
+    display: grid;
+    gap: 4rem;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+.deliveries {
+  padding: 5rem 0;
+}
+.deliveries__title {
+  text-align: center;
+  color: #455a64;
+}
+@media (min-width: 768px) {
+  .deliveries__grid {
+    display: grid;
+    gap: 5rem;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+.deliveries__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: flex-start;
+}
+.deliveries__info {
+  color: #455a64;
+  line-height: 1.5;
+}
+.deliveries__link {
+  background-color: #e8505b;
+  font-size: 2rem;
+  padding: 1.2rem 3rem;
+  border-radius: 1rem;
+  font-weight: 700;
+  display: block;
+  width: 100%;
+  text-align: center;
+  color: #FFFFFF;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+  border: none;
+}
+.deliveries__link:hover {
+  cursor: pointer;
+  background-color: #e22331;
+}
+@media (min-width: 768px) {
+  .deliveries__link {
+    width: auto;
+  }
+}
+
+.stores {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.stores__title, .stores__text {
+  text-align: center;
+}
+.stores__title {
+  color: #455a64;
+  margin: 2rem 0 0 0;
+}
+.stores__text {
+  margin-bottom: 3rem;
+}
+.stores__grid {
+  display: grid;
+  gap: 2rem;
+  grid-template-columns: repeat(2, 1fr);
+}
+.stores__link {
+  transition-property: transform;
+  transition-duration: 400ms;
+}
+.stores__link:hover {
+  transform: scale(1.1);
+}
+
+.download {
+  background-color: #eceeef;
+  padding: 5rem;
+}
+.download__grid {
+  display: flex;
+  flex-direction: column-reverse;
+}
+@media (min-width: 768px) {
+  .download__grid {
+    display: grid;
+    gap: 5rem;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+.download__image {
+  width: 50%;
+  margin: 10rem auto 0 auto;
+  transition-property: transform;
+  transition-duration: 400ms;
+}
+.download__image:hover {
+  transform: rotate(4deg) scale(1.1);
+}
+
+.footer {
+  background-color: #455a64;
+  padding-top: 5rem;
+}
+@media (min-width: 768px) {
+  .footer__grid {
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+.footer__widget {
+  margin-bottom: 5rem;
+  padding: 0 2rem;
+}
+.footer__widget:last-of-type {
+  margin-bottom: 0;
+}
+.footer__title {
+  color: #FFFFFF;
+  margin: 0;
+  text-align: center;
+}
+@media (min-width: 768px) {
+  .footer__title {
+    text-align: left;
+  }
+}
+.footer__nav {
+  display: flex;
+  flex-direction: column;
+}
+.footer__nav, .footer__text {
+  margin-top: 2rem;
+}
+.footer__link, .footer__text {
+  font-size: 2rem;
+  line-height: 1.8;
+  color: #FFFFFF;
+  text-align: center;
+}
+@media (min-width: 768px) {
+  .footer__link, .footer__text {
+    text-align: left;
+  }
+}
+.footer__copyright {
+  background-color: #e8505b;
+  margin: 0;
+  color: #FFFFFF;
+  text-align: center;
+  padding: 2rem;
 }/*# sourceMappingURL=app.css.map */
