--- a/src/scss/base/_globals.scss
+++ b/src/scss/base/_globals.scss
@@ -17,7 +17,7 @@ p {
     color: v.$black;
     font-size: 2rem;
 }
-.contenedor {
+.container {
     width: 95%;
     max-width: 1200px;
     margin: 0 auto;
