--- a/src/scss/header/_header.scss
+++ b/src/scss/header/_header.scss
@@ -3,20 +3,24 @@
 
 .header{
 
-    background-color: red;
-
     display: flex;
     flex-direction: column;
+    align-items: center;
+    padding: v.$gap 0;
+    align-items: center;
 
     @include m.desktop{
         flex-direction: row;
         justify-content: space-between;
-        align-items: center;
     }
 
     &__logo{
-
         width: 30rem;
+        margin-bottom: 5rem;
 
+        @include m.desktop{
+            margin-bottom: 0;
+        }
     }
+
 }
